--- a/depictions/Template/index.html
+++ b/depictions/Template/index.html
@@ -48,6 +48,18 @@
 
 <label>Other</label>
 <fieldset>
+
+<a href="/depictions/resources/help.html">
+<img class="icon" src="../resources/icons/help.png" width="58" height="58">
+<div>
+<div>
+<label>
+<p>Help</p>
+</label>
+</div>
+</div>
+</a>
+
 <a href="/depictions/resources/donate.html">
 <img class="icon" src="../resources/icons/donate.png" width="58" height="58">
 <div>
@@ -58,6 +70,7 @@
 </div>
 </div>
 </a>
+
 <a href="/depictions/resources/contact.html">
 <img class="icon" src="../resources/icons/contact.png" width="58" height="58">
 <div>
@@ -68,6 +81,7 @@
 </div>
 </div>
 </a>
+
 </fieldset>
 
 </panel>
