first step to cleaning up html/css

--- a/depictions/Template/changelog.html
+++ b/depictions/Template/changelog.html
@@ -11,28 +11,28 @@
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
-<body class="pinstripe">
-  <panel>
+<body>
+  <div class="panel">
 
-    <block>
+    <div id="block-title">
       <p>TWEAKNAME Changelog</p>
-    </block>
+    </div>
 
-    <label>Version 1.1 (DATE)</label>
-    <fieldset>
+    <div class="section-label">Version 1.1 (DATE)</div>
+    <div class="fieldset">
       <div>
         <p>UPDATE INFO</p>
       </div>
-    </fieldset>
+    </div>
 
-    <label>Version 1.0 (DATE)</label>
-    <fieldset>
+    <div class="section-label">Version 1.0 (DATE)</div>
+    <div class="fieldset">
       <div>
         <p>Initial Release</p>
       </div>
-    </fieldset>
+    </div>
 
-  </panel>
+  </div>
 </body>
 
 </html>
