--- a/depictions/Template/index.html
+++ b/depictions/Template/index.html
@@ -11,79 +11,69 @@
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
-<body class="pinstripe">
-  <panel>
+<body>
+  <div class="panel">
 
-    <label>Info</label>
-    <fieldset>
+    <div class="section-label">Info</div>
+    <div class="fieldset">
       <div>
         <p>TWEAK INFO GOES HERE</p>
       </div>
-      <a href="./screenshots.html">
+      <a class="black-text" href="./screenshots.html">
         <img class="icon" src="../resources/icons/screenshots.png" width="58" height="58">
         <div>
           <div>
-            <label>
-              <p>Screenshots</p>
-            </label>
+            <p>Screenshots</p>
           </div>
         </div>
       </a>
-    </fieldset>
+    </div>
 
-    <label>Changelog</label>
-    <fieldset>
-      <a href="./changelog.html">
+    <div class="section-label">Changelog</div>
+    <div class="fieldset">
+      <a class="black-text" href="./changelog.html">
         <img class="icon" src="../resources/icons/changelog.png" width="58" height="58">
         <div>
           <div>
-            <label>
-              <p>Changelog</p>
-            </label>
+            <p>Changelog</p>
           </div>
         </div>
       </a>
-    </fieldset>
+    </div>
 
-    <label>Other</label>
-    <fieldset>
+    <div class="section-label">Other</div>
+    <div class="fieldset">
 
-      <a href="/depictions/resources/help.html">
+      <a class="black-text" href="/depictions/resources/help.html">
         <img class="icon" src="../resources/icons/help.png" width="58" height="58">
         <div>
           <div>
-            <label>
-              <p>Help</p>
-            </label>
+            <p>Help</p>
           </div>
         </div>
       </a>
 
-      <a href="/depictions/resources/donate.html">
+      <a class="black-text" href="/depictions/resources/donate.html">
         <img class="icon" src="../resources/icons/donate.png" width="58" height="58">
         <div>
           <div>
-            <label>
-              <p>Donate</p>
-            </label>
+            <p>Donate</p>
           </div>
         </div>
       </a>
 
-      <a href="/depictions/resources/contact.html">
+      <a class="black-text" href="/depictions/resources/contact.html">
         <img class="icon" src="../resources/icons/contact.png" width="58" height="58">
         <div>
           <div>
-            <label>
-              <p>Contact Me</p>
-            </label>
+            <p>Contact Me</p>
           </div>
         </div>
       </a>
 
-    </fieldset>
+    </div>
 
-  </panel>
+  </div>
   <script type="text/javascript" src="../resources/js/iosver.js"></script>
 </body>
 
