--- a/depictions/Template/screenshots.html
+++ b/depictions/Template/screenshots.html
@@ -1,20 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
   <title>Screenshots</title>
   <base target="_top">
-  <link rel="stylesheet" type="text/css" href="../resources/css/style.css"/>
+  <link rel="stylesheet" type="text/css" href="../resources/css/style.css" />
   <meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
   <meta name="format-detection" content="telephone=no">
   <script type="text/javascript" src="../resources/js/thankssaurik.js"></script>
 </head>
 
-<body class="pinstripe">
-  <panel>
+<body>
+  <div class="panel">
 
-    <label>Screenshots</label>
-    <fieldset>
+    <div class="section-label">Screenshots</div>
+    <div class="fieldset">
       <div>
         <center>
 
@@ -30,8 +31,9 @@
 
         </center>
       </div>
-    </fieldset>
+    </div>
 
-  </panel>
+  </div>
 </body>
+
 </html>
