we be redesigning

--- a/repo/css/style.scss
+++ b/repo/css/style.scss
@@ -175,5 +175,7 @@ body {
     text-align: right;
     float: right;
     color: #8E8E9F;
+    width: calc(100% - 45px);
+    text-overflow:ellipsis;
   }
 }
