--- a/repo/depictions/Template/index.html
+++ b/repo/depictions/Template/index.html
@@ -61,7 +61,7 @@
         </div>
       </a>
 
-      <a class="black-text" href="/repo/contact.html">
+      <a class="black-text" href="/contact.html">
         <img class="icon" src="/resources/icons/contact.png" width="58" height="58">
         <div>
           <div>
