--- a/repo/css/style.css
+++ b/repo/css/style.css
@@ -1,7 +1,5 @@
 * {
-  -moz-box-sizing: border-box;
   -ms-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0;
   border: 0;
@@ -85,8 +83,8 @@ body {
 }
 
 .fieldset > a > div > div {
-  margin: 0 9px 0 0;
-  padding: 10px 15px 10px 0;
+  margin-right: 10px;
+  padding: 10px 0;
 }
 
 .fieldset > a[href].black-text > div > div {
