--- a/repo/css/style.scss
+++ b/repo/css/style.scss
@@ -87,8 +87,8 @@ body {
     }
 
     >div>div {
-      margin: 0 9px 0 0;
-      padding: 10px 15px 10px 0;
+      margin-right: 10px;
+      padding: 10px 0;
     }
   }
 
