someone says underlines are bad

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -36,6 +36,6 @@ $link-hover: $cj-green;
 // $colors: map-merge($colors, $addColors);
 
 // 6. Import the rest of Bulma
-// @import "./_variables.scss";
+// @import "./variables.scss";
 @import "./bulma/bulma";
-@import "./_overrides.scss";
+@import "./overrides.scss";
