--- a/webpage_builder/templates/screenshot.html
+++ b/webpage_builder/templates/screenshot.html
@@ -1,3 +1,8 @@
-<a class="screenshot" href="{{url}}">
-    <img class="screenshot-img" src="{{url}}">
-</a>
+<div class="screenshot">
+    <a class="screenshot-img-link" href="{{url}}">
+        <img class="screenshot-img" src="{{url}}">
+    </a>
+    <div class="screenshot-label">
+        {{label}}
+    </div>
+</div>
