--- a/webpage_builder/templates/screenshot.html
+++ b/webpage_builder/templates/screenshot.html
@@ -1,8 +1,8 @@
 <div class="screenshot">
-    <a class="screenshot-img-link" href="{{url}}">
-        <img class="screenshot-img" src="{{url}}">
+    <a class="screenshot-img-link" href="{{src}}">
+        <img class="screenshot-img" src="{{src}}">
     </a>
     <div class="screenshot-label">
-        {{label}}
+        {{caption}}
     </div>
 </div>
