--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -79,24 +79,24 @@ div.screenshot-container
     .navbar
         .navbar-item:hover:not(.is-hoverable), .is-active>.navbar-link, .is-hoverable:hover>.navbar-link
             background-color: darken($primary, 6) !important
-        .is-active:not(.navbar-menu)
-            background-color: darken($primary, 4) !important
-        .is-active.navbar-menu
-            background-color: darken($primary, 2) !important
         .navbar-item
             color: $white
 
 +desktop
     .hero
         .navbar
+            .navbar-menu.is-active
             .navbar-end, .navbar-brand
                 >.navbar-item:not(.has-dropdown)
                     border-bottom: 1px solid $nav-border
                     border-right: 1px solid $nav-border
                 >.navbar-item.has-dropdown
                     .navbar-link
+                        z-index: 1;
                         border-bottom: 1px solid $nav-border
                         border-right: 1px solid $nav-border
+                    .navbar-dropdown
+                        z-index: 0;
                 >.navbar-item:first-child
                     border-left: 1px solid $nav-border
             .navbar-link
@@ -113,3 +113,45 @@ div.screenshot-container
                 box-shadow: none
                 .navbar-item
                     padding: 6px 10px
+
++desktop
+    .navbar-item.has-dropdown
+        
+
+    @keyframes cjInSlide
+        from
+            transform: translate(0, -100%);
+        to
+            transform: translate(0, 0);
+
+    .cjInSlide
+        $duration: 0.5s;
+        animation-fill-mode: both;
+        $vert: 0;
+        $horiz: 0.75;
+        animation: $duration cjInSlide cubic-bezier($horiz,$vert,1 - $horiz,1 - $vert);
+
+
+    @keyframes cjInGrow
+        from
+            opacity: 0;
+            transform: translate(0, calc(-50%)) scale(0, 0);
+        to
+            opacity: 1;
+            transform: translate(0, 0) scale(1, 1);
+
+    .cjInGrow
+        $duration: 0.5s;
+        animation-fill-mode: both;
+        animation: $duration cjInGrow;
+
+    @keyframes cjInStretch
+        from
+            transform: translate(0, calc(-50%)) scale(1, 0);
+        to
+            transform: translate(0, 0) scale(1, 1);
+
+    .cjInStretch
+        $duration: 0.5s;
+        animation: $duration cjInStretch;
+
