--- a/assets/css/styles.sass
+++ b/assets/css/styles.sass
@@ -59,11 +59,11 @@ div.screenshot-container
             padding: 1px
             div.screenshot-label
                 margin-top: -4px
-            a.screenshot-img-link
-                img.screenshot-img
-                    height: 50vw
-                    min-height: 300px
-                    max-height: 450px
+            // a.screenshot-img-link
+            img.screenshot-img
+                height: 50vw
+                min-height: 300px
+                max-height: 450px
                     // height: 300px
                     // +tablet
                     //     height: 350px
