--- a/webpage_builder/templates/screenshot.html
+++ b/webpage_builder/templates/screenshot.html
@@ -1,7 +1,7 @@
 <div class="screenshot">
-    <a class="screenshot-img-link" href="{{src}}">
-        <img class="screenshot-img" src="{{src}}">
-    </a>
+    <!-- <a class="screenshot-img-link" href="{{src}}"> -->
+    <img class="screenshot-img" src="{{src}}">
+    <!-- </a> -->
     <div class="screenshot-label">
         {{caption}}
     </div>
